update to include both net5 and net6

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@
 ################################################################################
 
 /.vs
-/TestProject1/bin/Debug/net5.0
+/TestProject1/bin
 /TestProject1/obj
